--- a/index.html
+++ b/index.html
@@ -184,22 +184,22 @@
             <!-- replace with your own email address -->
             <a href="mailto:matthew.kellner@outlook.com" class="footer__link">matthew.kellner@outlook.com</a>
             <ul class="social-list">
-                <li class="social-list__item"><a class="social-list__link" href="https://codepen.io" target="_blank">
+                <li class="social-list__item"><a class="social-list__link" href="https://codepen.io/mkellner43" target="_blank">
                     <i class="fab fa-codepen"></i>
                 </a>
             </li>
-                <li class="social-list__item"><a class="social-list__link" href="http://instagram.com" target="_blank">
+                <li class="social-list__item"><a class="social-list__link" href="https://www.instagram.com/mkellner43/" target="_blank">
                     <i class="fab fa-instagram"></i>
 
                 </a>
             </li>
-                <li class="social-list__item"><a class="social-list__link" href="https://facebook.com" target="_blank">
+                <li class="social-list__item"><a class="social-list__link" href="https://www.facebook.com/matt.kellner1/" target="_blank">
                     <i class="fab fa-facebook"></i>
                 
                 </a>
             </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://github.com" class="fab fa-github" target="_blank">
+                    <a class="social-list__link" href="https://github.com/mkellner43" class="fab fa-github" target="_blank">
                         <i class="fab fa-github"></i></a>
                 </li>
             </ul>
