--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
            <p class="section__subtitle section__subtitle--about">Full-Stack Web Developer based out of Dallas, TX</p>
            
            <div class="about-me__body">
-            <p>The best of the best fam! I'll add more details about how later.</p>
+            <p>Add about me content.</p>
            </div>
            
            <img width= "300px" height="400px" src="img/1790F88A-66B5-4652-8A2C-774D5191B130_1_105_c.jpeg" alt="Matt smiling while driving a boat on a river">
